@@ -16,7 +16,6 @@ import jakarta.enterprise.context.Dependent;
 import jakarta.enterprise.inject.Any;
 import jakarta.enterprise.inject.Instance;
 import jakarta.inject.Inject;
-
 import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
@@ -54,8 +53,8 @@ public class SykdomVurderingService {
 
     @Inject
     public SykdomVurderingService(@Any Instance<VilkårsPerioderTilVurderingTjeneste> vilkårsPerioderTilVurderingTjenester,
-            SykdomVurderingRepository sykdomVurderingRepository, SykdomDokumentRepository sykdomDokumentRepository,
-            SykdomGrunnlagService sykdomGrunnlagService, BasisPersonopplysningTjeneste personopplysningTjeneste) {
+                                  SykdomVurderingRepository sykdomVurderingRepository, SykdomDokumentRepository sykdomDokumentRepository,
+                                  SykdomGrunnlagService sykdomGrunnlagService, BasisPersonopplysningTjeneste personopplysningTjeneste) {
         this.vilkårsPerioderTilVurderingTjenester = vilkårsPerioderTilVurderingTjenester;
         this.sykdomVurderingRepository = sykdomVurderingRepository;
         this.sykdomDokumentRepository = sykdomDokumentRepository;
@@ -73,20 +72,45 @@ public class SykdomVurderingService {
         }
 
         final boolean harUklassifiserteDokumenter = sykdomDokumentRepository.hentAlleDokumenterFor(pleietrengende).stream().anyMatch(d -> d.getType() == SykdomDokumentType.UKLASSIFISERT);
+        boolean dokumenterUtenUtkvittering = !sykdomDokumentRepository.hentDokumentSomIkkeHarOppdatertEksisterendeVurderinger(pleietrengende).isEmpty();
+
         final boolean manglerGodkjentLegeerklæring = manglerGodkjentLegeerklæring(pleietrengende);
-        final boolean manglerDiagnosekode = sykdomDokumentRepository.hentDiagnosekoder(pleietrengende).getDiagnosekoder().isEmpty();
 
         final boolean eksisterendeVurderinger = !sykdomVurderingRepository.hentSisteVurderingerFor(SykdomVurderingType.KONTINUERLIG_TILSYN_OG_PLEIE, pleietrengende).isEmpty();
-        boolean dokumenterUtenUtkvittering = !sykdomDokumentRepository.hentDokumentSomIkkeHarOppdatertEksisterendeVurderinger(pleietrengende).isEmpty();
         final boolean nyttDokumentHarIkkekontrollertEksisterendeVurderinger = dokumenterUtenUtkvittering && eksisterendeVurderinger;
 
-        final var ktp = hentVurderingerForKontinuerligTilsynOgPleie(behandling);
-        final boolean manglerVurderingAvKontinuerligTilsynOgPleie = !ktp.getResterendeVurderingsperioder().isEmpty();
-
-        final var too = hentVurderingerForToOmsorgspersoner(behandling);
-        final boolean manglerVurderingAvToOmsorgspersoner = !too.getResterendeVurderingsperioder().isEmpty();
-
         final boolean harDataSomIkkeHarBlittTattMedIBehandling = sykdomGrunnlagService.harDataSomIkkeHarBlittTattMedIBehandling(behandling);
+
+        boolean manglerDiagnosekode;
+        boolean manglerVurderingAvKontinuerligTilsynOgPleie;
+        boolean manglerVurderingAvToOmsorgspersoner;
+        boolean manglerVurderingAvILivetsSluttfase;
+
+        switch (behandling.getFagsakYtelseType()) {
+            case PLEIEPENGER_SYKT_BARN -> {
+                if (!utledPerioderTilVurderingMedOmsorgenFor(behandling).isEmpty()) {
+                    manglerDiagnosekode = sykdomDokumentRepository.hentDiagnosekoder(pleietrengende).getDiagnosekoder().isEmpty();
+                } else {
+                    manglerDiagnosekode = false;
+                }
+                manglerVurderingAvKontinuerligTilsynOgPleie = !hentVurderingerForKontinuerligTilsynOgPleie(behandling).getResterendeVurderingsperioder().isEmpty();
+                manglerVurderingAvToOmsorgspersoner = !hentVurderingerForToOmsorgspersoner(behandling).getResterendeVurderingsperioder().isEmpty();
+                manglerVurderingAvILivetsSluttfase = false;
+
+                boolean harUbesluttedeVurderinger = harUbesluttedeVurderinger(behandling);
+
+                if (!harUbesluttedeVurderinger && !harUklassifiserteDokumenter && !dokumenterUtenUtkvittering && !manglerVurderingAvKontinuerligTilsynOgPleie && !manglerVurderingAvToOmsorgspersoner) {
+                    return SykdomAksjonspunkt.bareFalse();
+                }
+            }
+            case PLEIEPENGER_NÆRSTÅENDE -> {
+                manglerDiagnosekode = false;
+                manglerVurderingAvToOmsorgspersoner = false;
+                manglerVurderingAvKontinuerligTilsynOgPleie = false;
+                manglerVurderingAvILivetsSluttfase = !hentVurderingerForILivetsSluttfase(behandling).getResterendeVurderingsperioder().isEmpty();
+            }
+            default -> throw new IllegalArgumentException("Ikke-støttet ytelstype: " + behandling.getFagsakYtelseType());
+        }
 
         return new SykdomAksjonspunkt(
             harUklassifiserteDokumenter,
@@ -94,8 +118,18 @@ public class SykdomVurderingService {
             manglerGodkjentLegeerklæring,
             manglerVurderingAvKontinuerligTilsynOgPleie,
             manglerVurderingAvToOmsorgspersoner,
+            manglerVurderingAvILivetsSluttfase,
             harDataSomIkkeHarBlittTattMedIBehandling,
             nyttDokumentHarIkkekontrollertEksisterendeVurderinger);
+    }
+
+    private boolean harUbesluttedeVurderinger(Behandling behandling) {
+        SykdomGrunnlagBehandling sykdomGrunnlagBehandling = sykdomGrunnlagService.hentGrunnlag(behandling.getUuid());
+
+        boolean harUbesluttet = sykdomGrunnlagBehandling.getGrunnlag().getVurderinger()
+            .stream()
+            .anyMatch(v -> !v.isBesluttet());
+        return harUbesluttet;
     }
 
     private boolean manglerGodkjentLegeerklæring(final AktørId pleietrengende) {
@@ -110,23 +144,69 @@ public class SykdomVurderingService {
         return utledPerioder(SykdomVurderingType.TO_OMSORGSPERSONER, behandling);
     }
 
+    public SykdomVurderingerOgPerioder hentVurderingerForILivetsSluttfase(Behandling behandling) {
+        return utledPerioderPPN(behandling);
+    }
+
     private LocalDateTimeline<Boolean> hentInnleggelseUnder18årTidslinje(Behandling behandling) {
         final var innleggelser = hentInnleggelser(behandling);
 
         final LocalDateTimeline<Boolean> innleggelsesperioderTidslinje = new LocalDateTimeline<Boolean>(innleggelser.getPerioder()
-                .stream()
-                .map(p -> new LocalDateSegment<>(p.getFom(), p.getTom(), Boolean.TRUE))
-                .collect(Collectors.toList()));
+            .stream()
+            .map(p -> new LocalDateSegment<>(p.getFom(), p.getTom(), Boolean.TRUE))
+            .toList());
         final LocalDate pleietrengendesFødselsdato = finnPleietrengendesFødselsdato(behandling);
         return innleggelsesperioderTidslinje.intersection(new LocalDateInterval(null, pleietrengendesFødselsdato.plusYears(PleietrengendeAlderPeriode.ALDER_FOR_STRENGERE_PSB_VURDERING).minusDays(1))).compress();
+    }
+
+    private LocalDateTimeline<Boolean> hentAlleInnleggelserTidslinje(Behandling behandling) {
+        final var innleggelser = hentInnleggelser(behandling);
+
+        return new LocalDateTimeline<Boolean>(innleggelser.getPerioder()
+            .stream()
+            .map(p -> new LocalDateSegment<>(p.getFom(), p.getTom(), Boolean.TRUE))
+            .toList())
+            .compress();
     }
 
     private List<Periode> hentKontinuerligTilsynOgPleiePerioder(Behandling behandling) {
         final LocalDateTimeline<SykdomVurderingVersjon> vurderinger = hentVurderinger(SykdomVurderingType.KONTINUERLIG_TILSYN_OG_PLEIE, behandling);
         return vurderinger.stream()
-                .filter(s -> s.getValue().getResultat() == Resultat.OPPFYLT)
-                .map(s -> new Periode(s.getFom(), s.getTom()))
-                .collect(Collectors.toList());
+            .filter(s -> s.getValue().getResultat() == Resultat.OPPFYLT)
+            .map(s -> new Periode(s.getFom(), s.getTom()))
+            .toList();
+    }
+
+    public SykdomVurderingerOgPerioder utledPerioderPPN(Behandling behandling) {
+        LocalDateTimeline<SykdomVurderingVersjon> vurderinger = hentVurderinger(SykdomVurderingType.LIVETS_SLUTTFASE, behandling);
+        LocalDateTimeline<Set<Saksnummer>> behandledeSøknadsperioder = sykdomVurderingRepository.hentSaksnummerForSøktePerioder(behandling.getFagsak().getPleietrengendeAktørId());
+
+        List<Periode> perioderKreverVurdering = behandledeSøknadsperioder.stream().map(s->new Periode(s.getFom(), s.getTom())).toList();
+        VilkårsPerioderTilVurderingTjeneste perioderTilVurderingTjeneste = getPerioderTilVurderingTjeneste(behandling);
+        NavigableSet<DatoIntervallEntitet> perioderTilVurdering = perioderTilVurderingTjeneste.utled(behandling.getId(), VilkårType.I_LIVETS_SLUTTFASE);
+        LocalDateTimeline<Boolean> tidslinjeKreverVurdering = new LocalDateTimeline<>(perioderTilVurdering.stream().map(p -> new LocalDateSegment<>(p.toLocalDateInterval(), true)).toList());
+
+        LocalDateTimeline<Boolean> innleggelserTidslinje = hentAlleInnleggelserTidslinje(behandling);
+        LocalDateTimeline<Boolean> alleResterendeVurderingsperioder = finnResterendeVurderingsperioder(tidslinjeKreverVurdering, vurderinger);
+        if (manglerGodkjentLegeerklæring(behandling.getFagsak().getPleietrengendeAktørId())) {
+            alleResterendeVurderingsperioder = LocalDateTimeline.EMPTY_TIMELINE;
+        }
+
+        List<Periode> resterendeVurderingsperioder = toPeriodeList(alleResterendeVurderingsperioder);
+        List<Periode> resterendeValgfrieVurderingsperioder = toPeriodeList(
+            kunPerioderSomIkkeFinnesI(kunPerioderSomIkkeFinnesI(tidslinjeKreverVurdering, alleResterendeVurderingsperioder), vurderinger)
+        );
+        List<Periode> nyeSøknadsperioder = Collections.emptyList();
+
+        return new SykdomVurderingerOgPerioder(
+            vurderinger,
+            behandledeSøknadsperioder,
+            perioderKreverVurdering,
+            resterendeVurderingsperioder,
+            resterendeValgfrieVurderingsperioder,
+            nyeSøknadsperioder,
+            SykdomUtils.toPeriodeList(innleggelserTidslinje)
+        );
     }
 
     @SuppressWarnings("unchecked")
@@ -169,14 +249,14 @@ public class SykdomVurderingService {
         }
 
         return new SykdomVurderingerOgPerioder(
-                vurderinger,
-                behandledeSøknadsperioder,
-                alleSøknadsperioder,
-                resterendeVurderingsperioder,
-                resterendeValgfrieVurderingsperioder,
-                nyeSøknadsperioder,
-                SykdomUtils.toPeriodeList(innleggelseUnder18årTidslinje)
-            );
+            vurderinger,
+            behandledeSøknadsperioder,
+            alleSøknadsperioder,
+            resterendeVurderingsperioder,
+            resterendeValgfrieVurderingsperioder,
+            nyeSøknadsperioder,
+            SykdomUtils.toPeriodeList(innleggelseUnder18årTidslinje)
+        );
     }
 
     public LocalDate finnPleietrengendesFødselsdato(Behandling behandling) {
@@ -195,21 +275,21 @@ public class SykdomVurderingService {
         final var perioderTilVurdering18 = perioderTilVurderingTjeneste.utled(behandling.getId(), VilkårType.MEDISINSKEVILKÅR_18_ÅR);
         final NavigableSet<DatoIntervallEntitet> perioderTilVurdering = union(perioderTilVurderingUnder18, perioderTilVurdering18);
         final LocalDateTimeline<Boolean> perioderTilVurderingTidslinje = new LocalDateTimeline<Boolean>(perioderTilVurdering.stream()
-                .map(p -> new LocalDateSegment<Boolean>(p.getFomDato(), p.getTomDato(), Boolean.TRUE))
-                .collect(Collectors.toList()));
+            .map(p -> new LocalDateSegment<Boolean>(p.getFomDato(), p.getTomDato(), Boolean.TRUE))
+            .collect(Collectors.toList()));
         final LocalDateTimeline<VilkårPeriode> omsorgenForTidslinje = sykdomGrunnlagService.hentOmsorgenForTidslinje(behandling.getId()).filterValue(vp -> vp.getUtfall() == Utfall.IKKE_OPPFYLT);
 
         return kunPerioderSomIkkeFinnesI(perioderTilVurderingTidslinje, omsorgenForTidslinje);
     }
 
-    private static <T> NavigableSet<T> union(NavigableSet<T> s1, NavigableSet<T> s2)  {
+    private static <T> NavigableSet<T> union(NavigableSet<T> s1, NavigableSet<T> s2) {
         final var resultat = new TreeSet<>(s1);
         resultat.addAll(s2);
         return resultat;
     }
 
     private LocalDateTimeline<Set<Saksnummer>> harAndreSakerEnn(Saksnummer saksnummer,
-            final LocalDateTimeline<Set<Saksnummer>> behandledeSøknadsperioder) {
+                                                                final LocalDateTimeline<Set<Saksnummer>> behandledeSøknadsperioder) {
         return behandledeSøknadsperioder.filterValue(
             s -> s.size() > 1 || (s.size() == 1 && !s.contains(saksnummer))
         );
@@ -252,9 +332,9 @@ public class SykdomVurderingService {
 
 
         public SykdomVurderingerOgPerioder(LocalDateTimeline<SykdomVurderingVersjon> vurderingerTidslinje,
-                LocalDateTimeline<Set<Saksnummer>> saksnummerForPerioder, List<Periode> søknadsperioder,
-                List<Periode> resterendeVurderingsperioder, List<Periode> resterendeValgfrieVurderingsperioder,
-                List<Periode> nyeSøknadsperioder, List<Periode> innleggelsesperioder) {
+                                           LocalDateTimeline<Set<Saksnummer>> saksnummerForPerioder, List<Periode> søknadsperioder,
+                                           List<Periode> resterendeVurderingsperioder, List<Periode> resterendeValgfrieVurderingsperioder,
+                                           List<Periode> nyeSøknadsperioder, List<Periode> innleggelsesperioder) {
             this.vurderingerTidslinje = vurderingerTidslinje;
             this.saksnummerForPerioder = saksnummerForPerioder;
             this.søknadsperioder = søknadsperioder;
